[package]
name = "camera-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
cdr = "0.2.4"
serde = "1"
serde_derive = "1"
v4l = { version = "0.13.1", features = ["v4l2-sys"] }
zenoh = "0.7.0-rc"
